remove max-height property in media query to avoid overlap of text

--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -113,7 +113,7 @@ input[type="submit"]:hover {
 
   h1 {
     font-size: 2rem;
-    min-height: 5vh;
+    
   }
 
 }
